# gypsy

./: .gitignore  AUTHORS  Gypsy.conf  Gypsy.conf.in  HACKING  LICENSE  Makefile.am  NEWS  TODO  autogen.sh  configure.ac  gypsy.pc.in  org.freedesktop.Gypsy.service.in
docs/: Makefile.am  gypsy-tutorial.html  why-not-gpsd.html
docs/reference/: Makefile.am  gypsy-design.xml  gypsy-docs.sgml  gypsy-sections.txt  gypsy.types  python-tutorial.xml  why-not-gpsd.xml
docs/tools/: Makefile.am
etc/: Makefile.am  gypsy.conf
examples/: Makefile.am  gypsy-example-initscript  list-known-gps-devices.c  simple-gps-dbus.c  simple-gps-gypsy.c  simple-gps-python.py  simple-gps-satellites.c
gypsy/: Makefile.am  gypsy-accuracy.c  gypsy-accuracy.h  gypsy-control.c  gypsy-control.h  gypsy-course.c  gypsy-course.h  gypsy-device.c  gypsy-device.h  gypsy-discovery.c  gypsy-discovery.h  gypsy-marshal.list  gypsy-position.c  gypsy-position.h  gypsy-satellite.c  gypsy-satellite.h  gypsy-time.c  gypsy-time.h
interfaces/: Makefile.am  gypsy-client-full.xml  gypsy-discovery-full.xml  gypsy-discovery.xml  gypsy-server-full.xml
src/: Makefile.am  garmin.h  gypsy-client.c  gypsy-client.h  gypsy-debug.h  gypsy-discovery.c  gypsy-discovery.h  gypsy-garmin-parser.c  gypsy-garmin-parser.h  gypsy-nmea-parser.c  gypsy-nmea-parser.h  gypsy-parser.c  gypsy-parser.h  gypsy-server.c  gypsy-server.h  main.c  nmea-gen.c  nmea-gen.h  nmea-parser.c  nmea-parser.h  nmea.h
